vlib/v/checker/tests/alias_type_cast_option_result_unhandled_err.out
vlib/v/checker/tests/alias_type_cast_option_result_unhandled_err.vv:15:12: error: ret_abc_result() returns `!Abc`, so it should have either an `or {}` block, or `!` at the end
   13 | }
   14 | 
   15 | a := Alias(ret_abc_result())
      |            ~~~~~~~~~~~~~~~~
   16 | b := Alias(ret_abc_option())
   17 | println('${a}${b}')
